welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: '=' expected but 'new' found.
  var T new Array[Color] (getMondeHauteur())
        ^Array1:4: error: illegal start of simple expression
  for (i <-0 to getMondeHauteur()-1){
^